# tbd

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  models.rs  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
api/: get_user.rs  hello.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/test/: route.ts
src/app/contacts/: page.tsx
src/app/history/: page.tsx
src/app/photos/: page.tsx
src/app/what-to-do/: page.tsx
src/components/: BlurContainer.tsx  Button.tsx  ButtonLink.tsx  CallToAction.tsx  Checkbox.tsx  ContextProvider.tsx  CustomAnchorTag.tsx  CustomImage.tsx  Footer.tsx  ImageContainer.tsx  Modal.tsx  NavBar.tsx  NavBarContainer.tsx  Paragraph.tsx  PhotoCarouselModal.tsx  SectionHeader.tsx  SideBar.tsx  Video.tsx
src/components/goals/: Goals.tsx
src/components/habits/: Habits.tsx  HabitsModal.tsx
src/components/icons/: ChevronLeftArrow.tsx  ChevronRightArrow.tsx  CloseX.tsx  Hamburger.tsx  Instagram.tsx
src/components/navigation/: Navigation.tsx
src/components/tasks/: Tasks.tsx
src/util/: constants.ts  context.ts  context.tsx  helpers.ts  hooks.tsx  types.ts  util.ts
src/util/api/: user.ts
src/util/supabase/: channels.ts  functions.ts  index.ts
src/util/supabase/functions/: habits.ts
