[package]
name = "vercel-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.9"
serde_json = { version = "1", features = ["raw_value"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
rand = "0.8.5"
url = "2.3.1"
reqwest = { version = "0.11.12", features = ["json", "stream"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
# vercel_runtime = { version = "1.0.2" }
vercel_runtime = "1.0.2"
time = "0.3.25"
chrono = "0.4.26"
chrono-tz = "0.8.3"

# You can specify a library for shared logic here (optional)
[lib]
name = "models"
path = "models.rs"

# [[bin]]
# name = "models"
# path = "api/models.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "hello"
path = "api/hello.rs"

[[bin]]
name = "get_user"
path = "api/get_user.rs"
